# distributex

./: .gitignore  .watch.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  flake.nix  nginx.config  shell.nix
app/: index.html  retro.html
nginx/: default.conf  nginx.conf
services/chat/: Cargo.toml  Dockerfile  Makefile  mock.rs
services/chat/src/: http_handlers.rs  main.rs  templates.rs  ws_handlers.rs
services/chat/src/templates/: _join_form.html  chat.html  chat_input.html  index.html  message.html
services/news/: .gitignore  Dockerfile  Makefile  requirements.txt
services/news/app/: __init__.py  api.py  repository.py  server.py
services/news/app/templates/: _favorired_list.html  _favorited_details.html  _load_more.html  _stories_list.html  _story_details.html  _story_favorite.html  _story_link.html  index.html  news.html
services/one/: Dockerfile  Makefile  go.mod  go.sum  notes.md  todos.db
services/one/cmd/todo/: handlers.go  main.go  repository.go
services/one/web/: _todo.html  main.html  todo.html
services/todos/: Dockerfile  Makefile  go.mod
services/todos/cmd/todo/: handlers.go  main.go  repository.go
services/todos/web/: _todo.html  add.html  index.html  todo.html
