[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "chat-app"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
headers = "0.3"
handlebars = "4.4.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
log = "0.4.20"
